# winclear

./: .gitignore  README.md  pyproject.toml  setup.py
src/: clear.py
src/winclear/: __init__.py
