[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winclear"
description = "Clear stdout on Windows command prompt"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
clear = "clear:main"

[tool.setuptools_scm]
version_file = "src/winclear/_version.py"
